# SF

./: .gitignore  QSUP.md  README.md  ai_model.py  ai_scaler.pkl  audio.py  average_predictions.csv  board_client.py  deep_ai_model.h5  deep_ai_model.keras  extracted_features.csv  generate_visualizations.py  github.com_OpenNeuroDatasets_ds003800.git  goon.py  gradientboosting_model.pkl  live.py  model.keras  models.py  process_ds003800.py  process_ds006036.py  process_server.py  process_zenodo.py  pyproject.toml  requirements.txt  restore_ds004504_13.py  scaler.pkl  server.py  streamlit_app.py  translate.py  visualize.py
alzdetect/: __init__.py  cli.py
feature_analysis/: feature_statistics.csv
logs/gcn/: events.out.tfevents.1739992248.GubBrodcast.local.32861.0  events.out.tfevents.1739993153.GubBrodcast.local.36113.0  events.out.tfevents.1740091622.MacBookPro.58971.0  (+14 more)
trained_models/: blr_evaluation_metrics.json  e2e_scaler.joblib  gcn_e2e.pth  gcn_model.pth  logreg_evaluation_metrics.json  logreg_fold_1.joblib  logreg_fold_10.joblib  logreg_fold_2.joblib  logreg_fold_3.joblib  logreg_fold_4.joblib  logreg_fold_5.joblib  logreg_fold_6.joblib  logreg_fold_7.joblib  logreg_fold_8.joblib  logreg_fold_9.joblib  logreg_retrained.joblib  logreg_retrained_scaler.joblib  logreg_scaler_fold_1.joblib  logreg_scaler_fold_10.joblib  logreg_scaler_fold_2.joblib  logreg_scaler_fold_3.joblib  logreg_scaler_fold_4.joblib  logreg_scaler_fold_5.joblib  logreg_scaler_fold_6.joblib  logreg_scaler_fold_7.joblib  logreg_scaler_fold_8.joblib  logreg_scaler_fold_9.joblib  mlp_augmented_evaluation_metrics.json  mlp_e2e.pth  mlp_evaluation_metrics.json  mlp_fold_1.joblib  mlp_fold_1.keras  mlp_fold_10.joblib  mlp_fold_2.joblib  mlp_fold_2.keras  mlp_fold_3.joblib  mlp_fold_3.keras  mlp_fold_4.joblib  mlp_fold_5.joblib  mlp_fold_6.joblib  (+21 more)
(+790 files in other folders)
